src/main.css
.mod-root .workspace-leaf-content[data-type="terminal-view"] .view-content {
	background-color: var(--background-secondary);
}

.workspace-leaf-content[data-type="terminal-view"] {
	--font-monospace-terminal:
		"Source Code Pro", "Cascadia Code", Consolas, "Cascadia Mono", Menlo,
		Monaco, "Courier New", "Apple Color Emoji", "Segoe UI Emoji",
		"Segoe UI Symbol", "Noto Color Emoji", monospace;
}

